--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Document</title>
+    <title>Webstudio</title>
   </head>
   <body>
     <header>
@@ -158,6 +158,33 @@
                 alt="Фото Игоря Демьяненко"
                 width="270"
               />
+              <picture class="picture">
+                <source
+                  srcset="
+                    ./images/adaptive/tablet/team_card_1-tab.jpg    1x,
+                    ./images/adaptive/tablet/team_card_1-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/tablet/team_card_3-tab.jpg    1x,
+                    ./images/tablet/team_card_3-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/mobile/comand_mob/igor4mob@1x.jpg 1x,
+                    ./images/adaptive/mobile/comand_mob/igor4mob@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./images/desktop/desktop-team3@1x.jpg"
+                  alt="Фотография Игоря Демьяненко"
+                />
+              </picture>
               <h3 class="command__title">Игорь Демьяненко</h3>
               <p class="command__text">Product Designer</p>
               <ul class="social-nav">
