--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 alt="Фото Игоря Демьяненко"
                 width="270"
               />
-              <picture class="picture">
+              <picture class="command__picture">
                 <source
                   srcset="
                     ./images/adaptive/tablet/team_card_1-tab.jpg    1x,
@@ -168,8 +168,8 @@
                 />
                 <source
                   srcset="
-                    ./images/tablet/team_card_3-tab.jpg    1x,
-                    ./images/tablet/team_card_3-tab@2x.jpg 2x
+                    ./images/adaptive/tablet/team_card_1-tab.jpg    1x,
+                    ./images/adaptive/tablet/team_card_1-tab@2x.jpg 2x
                   "
                   media="(min-width: 768px)"
                 />
