--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
           <h2 class="command__primary">Наша команда</h2>
           <ul class="command__list">
             <li class="command__item">
-              <img
+              <!-- <img
                 src="./images/team_card_1.jpg"
                 class="command__picture"
                 alt="Фото Игоря Демьяненко"
                 width="270"
-              />
+              /> -->
               <picture class="command__picture">
                 <source
                   srcset="
-                    ./images/adaptive/tablet/team_card_1-tab.jpg    1x,
-                    ./images/adaptive/tablet/team_card_1-tab@2x.jpg 2x
+                    ./images/adaptive/Desktop/desktop-team1@2x.jpg 1x,
+                    ./images/adaptive/Desktop/desktop-team1@2x.jpg 2x
                   "
                   media="(min-width: 1200px)"
                 />
