--- a/index.html
+++ b/index.html
@@ -152,17 +152,11 @@
           <h2 class="command__primary">Наша команда</h2>
           <ul class="command__list">
             <li class="command__item">
-              <img
-                src="./images/team_card_1.jpg"
-                class="command__picture"
-                alt="Фото Игоря Демьяненко"
-                width="270"
-              />
-              <picture class="command__picture">
+              <picture class="command_picture">
                 <source
                   srcset="
-                    ./images/adaptive/Desktop/desktop-team1@2x.jpg 1x,
-                    ./images/adaptive/Desktop/desktop-team1@2x.jpg 2x
+                    ./images/team_card_1.jpg                       1x,
+                    ./images/adaptive/desktop/desktop-team1@2x.jpg 2x
                   "
                   media="(min-width: 1200px)"
                 />
@@ -181,10 +175,12 @@
                   media="(max-width: 767px)"
                 />
                 <img
-                  src="./images/desktop/desktop-team3@1x.jpg"
-                  alt="Фотография Игоря Демьяненко"
+                  src="./images/team_card_1.jpg"
+                  class="command__picture"
+                  alt="Фото Игоря Демьяненко"
                 />
               </picture>
+
               <h3 class="command__title">Игорь Демьяненко</h3>
               <p class="command__text">Product Designer</p>
               <ul class="social-nav">
