--- a/index.html
+++ b/index.html
@@ -215,12 +215,33 @@
               </ul>
             </li>
             <li class="command__item">
-              <!-- <img
-                src="./images/team_card_2.jpg"
-                class="command__picture"
-                alt="Фото Ольги Репиной"
-                width="270"
-              /> -->
+              <picture class="command_picture">
+                <source
+                  srcset="
+                    ./images/team_card_2.jpg,
+                    ./images/adaptive/desktop/desktop-team2@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/tablet/team_card_2-tab.jpg    1x,
+                    ./images/adaptive/tablet/team_card_2-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/mobile/comand_mob/olga4mob@1x.jpg 1x,
+                    ./images/adaptive/mobile/comand_mob/olga4mob@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./images/team_card_2.jpg"
+                  alt="Фотография Ольги Репиной"
+                />
+              </picture>
               <h3 class="title">Ольга Репина</h3>
               <p class="command__text">Frontend Developer</p>
               <ul class="social-nav decoration">
