--- a/index.html
+++ b/index.html
@@ -276,12 +276,33 @@
               </ul>
             </li>
             <li class="command__item">
-              <img
-                src="./images/team_card_3.jpg"
-                class="command__picture"
-                alt="Фото Николая Тарасова"
-                width="270"
-              />
+              <picture class="command_picture">
+                <source
+                  srcset="
+                    ./images/team_card_3.jpg                       1x,
+                    ./images/adaptive/desktop/desktop-team3@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/tablet/team_card_3-tab.jpg    1x,
+                    ./images/adaptive/tablet/team_card_3-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/mobile/comand_mob/nikolai4mob@1x.jpg 1x,
+                    ./images/adaptive/mobile/comand_mob/nikolai4mob@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./images/team_card_3.jpg"
+                  alt="Фотография Николая Тарасова"
+                />
+              </picture>
               <h3 class="command__title">Николай Тарасов</h3>
               <p class="command__text">Marketing</p>
               <ul class="social-nav decoration">
@@ -316,12 +337,33 @@
               </ul>
             </li>
             <li class="command__item">
-              <img
-                src="./images/team_card_4.jpg"
-                class="command__picture"
-                alt="Фото Михаила Ермакова"
-                width="270"
-              />
+              <picture class="command_picture">
+                <source
+                  srcset="
+                    ./images/team_card_4.jpg                       1x,
+                    ./images/adaptive/desktop/desktop-team4@2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/tablet/team_card_4-tab.jpg    1x,
+                    ./images/adaptive/tablet/team_card_4-tab@2x.jpg 2x
+                  "
+                  media="(min-width: 768px) "
+                />
+                <source
+                  srcset="
+                    ./images/adaptive/mobile/comand_mob/misha4mob@1x.jpg 1x,
+                    ./images/adaptive/mobile/comand_mob/misha4mob@2x.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                />
+                <img
+                  src="./images/team_card_4.jpg"
+                  alt="Фотография Михаила  Ермакова"
+                />
+              </picture>
               <h3 class="command__title">Михаил Ермаков</h3>
               <p class="command__text">UI Designer</p>
               <ul class="social-nav decoration">
