--- a/index.html
+++ b/index.html
@@ -19,23 +19,35 @@
             ><span class="logo__text">Web</span>Studio</a
           >
 
-          <!-- <ul class="navigation__list">
-                    <li class="navigation__item"><a href="./index.html" class="navigation__link navigation__link--active">Студия</a></li>
-                    <li class="navigation__item"><a href="./portfolio.html" class="navigation__link">Портфолио</a></li>
-                    <li class="navigation__item"><a href="" class="navigation__link">Контакты</a></li>
-                </ul>   
-                <address class="contacts">
-                    <a href="mailto:info@devstudio.com" class="contacts__link">
-                       <svg class="contacts__icon-mail">
-                           <use href="./images/sprite-icon.svg#icon-mail"></use>
-                       </svg>
-                        info@devstudio.com</a>
-                    <a href="tel:+380961111111" class="contacts__link">
-                        <svg class="contacts__icon-phone">
-                            <use href="./images/sprite-icon.svg#icon-smartphone"></use>
-                        </svg>
-                        +38 096 111 11 11</a>
-                </address> -->
+          <ul class="navigation__list">
+            <li class="navigation__item">
+              <a
+                href="./index.html"
+                class="navigation__link navigation__link--active"
+                >Студия</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a href="./portfolio.html" class="navigation__link">Портфолио</a>
+            </li>
+            <li class="navigation__item">
+              <a href="" class="navigation__link">Контакты</a>
+            </li>
+          </ul>
+          <address class="contacts">
+            <a href="mailto:info@devstudio.com" class="contacts__link">
+              <svg class="contacts__icon-mail">
+                <use href="./images/sprite-icon.svg#icon-mail"></use>
+              </svg>
+              info@devstudio.com</a
+            >
+            <a href="tel:+380961111111" class="contacts__link">
+              <svg class="contacts__icon-phone">
+                <use href="./images/sprite-icon.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
+          </address>
         </nav>
       </div>
     </header>
