--- a/portfolio.html
+++ b/portfolio.html
@@ -100,11 +100,8 @@
                       "
                       media="(max-width: 767px)"
                     />
-                    <img
-                      src="./images/project1.jpg"
-                      alt="Веб-сайт технокряк"
-                    /> </picture
-                  >adaptive/
+                    <img src="./images/project1.jpg" alt="Веб-сайт технокряк" />
+                  </picture>
 
                   <div class="works__overlay">
                     <p class="works__overlay-text">
