--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       <section class="clients">
         <div class="container">
           <h2 class="clients__primary">Постоянные клиенты</h2>
-          <ul class="clients__list flexbox">
+          <ul class="clients__list">
             <li class="clients__item">
               <a href="" class="clients__link">
                 <svg class="clients__icon" width="44" height="49">
